# phi-pay

./: LICENSE  NOTICE.md  README.md  TRADEMARK.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
api/proof/: sigil.js
api/sigils/: [id].js  seal.js  store.js
apps/phi-terminal-pwa/: App.tsx
circuits/: poseidon.circom
public/: manifest.json  offline.html  sigil_proof.circom  sigil_proof_0000.zkey  sw.js  verifier.html  verifier.inline.html
public/zk/: SigilVerifier.sol  sigil_proof.r1cs  sigil_proof.sym  sigil_proof_0000.zkey  sigil_proof_final.zkey  verification_key.json
src/: App.tsx  SovereignSolar.ts
src/components/: DayDetailModal.css  (+40 more)
tests/: kai_pulse.test.mjs  kai_time_display.test.mjs  sigil-proof-smoke.test.js  sigil_bundle_pipeline.test.mjs  sigil_lineage.test.mjs  sigil_metadata.test.mjs  verify_pipeline.test.mjs  zk_proof_api.test.mjs
tests/krystal-primitive-v1/reference/python/: pyproject.toml
tests/krystal-primitive-v1/reference/python/krystal/: __init__.py  b64.py  canonical.py  cli.py  hashing.py  kks.py  krl.py  normalize.py  registry.py  verify.py
tests/krystal-primitive-v1/reference/python/tests/: test_canonical.py  test_kks.py  test_krl.py  test_verify.py
tests/krystal-primitive-v1/reference/python/tests/fixtures/: canonical_vectors.json  registry_sample.json  url_vectors.json
types/: api-proof-sigil.d.ts
zk/: genSigilProof.mjs  index.ts  input.json  inputs.ts  pot12_0001.ptau  proof.json  prove.ts  public.json  sigil_proof.circom  sigil_proof.r1cs  sigil_proof.sym  types.ts  verify.ts  witness.wtns
(+351 files in other folders)
